# proxy-verifier

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTICES  README.md  Sconstruct  pyproject.toml
.agents/skills/build-pv/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/run-autests/: SKILL.md
.agents/skills/run-unit-tests/: SKILL.md
cmake/: HttpDependencies.cmake  PVFetchDependencies.cmake
docker/alpine_3.20/: Dockerfile
docker/centos7/: Dockerfile
docker/centos8/: Dockerfile
docker/rockylinux_10/: Dockerfile
docker/rockylinux_8/: Dockerfile
docker/rockylinux_9/: Dockerfile
docker/ubuntu_20.04/: Dockerfile
docker/ubuntu_22.04/: Dockerfile
docker/ubuntu_24.04/: Dockerfile
local/: CMakeLists.txt
local/include/core/: ArgParser.h  PollManager.h  PollTypes.h  SocketNotifier.h  SocketPoller.h  http.h  http2.h  http3.h  https.h
local/parts/: proxy-verifier.part
local/src/client/: verifier-client.cc
local/src/core/: PollManager.cc  ProxyVerifier.cc  SocketNotifier.cc  SocketPoller.cc  core.part  http.cc  http2.cc  http3.cc  https.cc
local/src/server/: verifier-server.cc
schema/: replay_schema.json
src/: CMakeLists.txt
src/client/: verifier-client.cc
src/core/: ArgParser.cc  ArgParser.h  Localizer.cc  Localizer.h  ProxyVerifier.cc  ProxyVerifier.h  YamlParser.cc  YamlParser.h  http.cc  http.h  http2.cc  http2.h  http3.cc  http3.h  https.cc  https.h  proxy_protocol_util.cc  proxy_protocol_util.h  verification.cc  verification.h
src/server/: verifier-server.cc
test/autests/: CMakeLists.txt  Pipfile
test/autests/gold_tests/arguments/version_argument/: version_argument.test.py
test/autests/gold_tests/autest-site/: client.test.ext  proxy.test.ext  proxy_http2.py  proxy_http3.py  server.test.ext  setup.cli.ext  test_proxy.py
test/autests/gold_tests/http3/: http3.test.py
test/autests/gold_tests/http3/gold/: http3_to_http1_client.gold  http3_to_http1_proxy.gold  http3_to_http1_server.gold
test/autests/gold_tests/http3/replay_files/: http3.yaml  http3_to_http1.yaml  http3_to_http1_failures.yaml
test/unit_tests/: CMakeLists.txt  test_verification.cc  unit_test_main.cc
tests/autests/: CMakeLists.txt  autest-parallel.py.in  autest.sh.in  serial_tests.txt  test-env-check.sh
tests/autests/gold_tests/arguments/format_argument/: unique_by_host.yaml
tests/autests/gold_tests/arguments/unprocessed_verifications/: unprocessed_verifications.test.py
tests/autests/gold_tests/autest-site/: client.test.ext  directive_engine.py  init.cli.ext  ports.py  proxy.test.ext  proxy_http1.py  proxy_http2.py  proxy_http3.py  server.test.ext
tests/autests/gold_tests/await/: await.replay.yaml  await.test.py
tests/autests/gold_tests/body/: body.yaml
tests/autests/gold_tests/body_verification/: http.yaml  http2.yaml  http3.yaml
tests/autests/gold_tests/connect_tunnel/: connect_tunnel.test.py
tests/autests/gold_tests/delay/: client-side-delay.yaml  server-side-delay.yaml
tests/autests/gold_tests/doctest/: example_replay.yaml
tests/autests/gold_tests/field_verification/: field_verification.test.py  not_nocase.test.py  substr_rules.test.py
tests/autests/gold_tests/field_verification/replay_files/: duplicate_fields.yaml  multi_value_equal.yaml  multi_value_includes.yaml  not_nocase.yaml  set_cookie_absent.yaml  set_cookie_negative.yaml  set_cookie_negative_failure.yaml  substr_rules_duplicate.yaml
tests/autests/gold_tests/http/replay_files/: single_transaction.yaml
tests/autests/gold_tests/http2/: http2.test.py
tests/autests/gold_tests/http2/gold/: http2_to_http2_client.gold  http2_to_http2_server.gold
tests/autests/gold_tests/http2/replay_files/: http2_hop_by_hop.yaml  http2_to_http1.yaml  http2_to_http2.yaml  http2_to_http2_verification_failures.yaml  set_alpn.yaml
tests/autests/gold_tests/http2_abort/replay_files/: client_goaway_after_headers.yaml  client_rst_stream_after_data.yaml  client_rst_stream_after_headers.yaml  client_rst_stream_mixed_data.yaml  server_goaway_after_headers.yaml  server_rst_stream_after_headers.yaml
tests/autests/gold_tests/http2_close_on_goaway/: http2_close_on_goaway.yaml
tests/autests/gold_tests/http2_frames/: http2_frames.yaml  http2_multi_data_frames.test.py  http2_multi_data_frames.yaml
tests/autests/gold_tests/http3/: http3.test.py
tests/autests/gold_tests/http3/gold/: http3_to_http1_client.gold
tests/autests/gold_tests/http3/replay_files/: http3_to_http1.yaml  http3_to_http1_failures.yaml
tests/autests/gold_tests/https/replay_files/: mtls.yaml  single_transaction.yaml
tests/autests/gold_tests/ipv6/replay_files/: single_transaction.yaml
tests/autests/gold_tests/method_verification/: method_verification.test.py
tests/autests/gold_tests/method_verification/replay_files/: http1_method_verification.yaml  http2_method_verification.yaml  http3_method_verification.yaml
tests/autests/gold_tests/no_proxy/: no_proxy.test.py
tests/autests/gold_tests/no_proxy/replay/: h2.yaml
tests/autests/gold_tests/on_connect/: on_connect.test.py
tests/autests/gold_tests/on_connect/replay_files/: on_connect.yaml  on_connect_http2.yaml
tests/autests/gold_tests/protocol_syntax/: protocol_syntax.test.py
tests/autests/gold_tests/protocol_syntax/gold/: single_transaction_client.gold
tests/autests/gold_tests/protocol_syntax/replay_files/: single_transaction.yaml
tests/autests/gold_tests/proxy-protocol/replay_files/: http_pp_v1_with_address.replay.yaml  http_single_transaction_no_pp.replay.yaml  http_single_transaction_pp_v1.replay.yaml  http_single_transaction_pp_v2.replay.yaml  https_single_transaction_pp_v2.replay.yaml  (+2 more)
tests/autests/gold_tests/url_verification/: url_verification.yaml
tests/unit_tests/: CMakeLists.txt  test_ArgParser.cc  test_YamlParser.cc  test_http.cc  test_verification.cc
tools/: build-library-dependencies.sh  build_http3_dependencies.sh  build_library_dependencies.sh  clang-format.sh  cmake-format.sh  copyright_update.sh  format.sh  replay-client-monitor.sh  replay-server-monitor.sh  replay_gen.py
(+10 files in other folders)
